Bug #140767.  Menus don't open when hovered while another menu is open.  Don't drop motion events when there's a rollup listener and the event isn't over a popup window.  r=rjesup,sr=shaver